--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     </head>
 
     <body>
-        <div></div>
+        <div>
+            <p class="header">Hello World</p>
+        </div>
     </body>
 
 </html>
