--- a/index.html
+++ b/index.html
@@ -3,16 +3,48 @@
 <html>
     
     <head>
-        <link rel="icon" href="images/favicon.ico" />
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Crimson+Text:ital,wght@0,400;0,700;1,400&family=Reem+Kufi&family=Roboto:wght@300;400;500;700&family=Scheherazade+New&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/c182924c4f.js" crossorigin="anonymous"></script>
+        <link rel="icon" href="images/favic.png" />
+        <link rel="stylesheet" href="styles/home-general.css" />
+        <link rel="stylesheet" href="styles/home-header.css"/>
+        <link rel="stylesheet" href="styles/home-main.css"/>
         <script src="script.js"></script>
-        <title>safwan</title>
+        <title>Mohammed Safwan</title>
     </head>
 
     <body>
-        <div>
-            <p class="header">Hello World</p>
-        </div>
+        <header>
+            <i class="fa-solid fa-circle-notch"></i>
+            <p>فمثله كمثل <span>صفوان</span> عليه تراب فأصابه وابل فتركه صلدا</p>
+            <img src="images/favic.png">
+        </header>
+        <main>
+            <section class="landing-section">
+                <div class="round-rect-1"></div>
+                <div class="moh-text">
+                    <h1>MOHAMMED</h1>
+                    <h2>(also Muhammad) /məˈhæm.ɪd/ us. /moʊˈhæm.ɪd/ the last prophet
+                        of Islam through whom the Quran was revealed and 
+                        the religion of Islam established and completed.</h2>
+                </div>
+                <div class="saf-text">
+                    <h1>SAFWAN</h1>
+                    <h2>A Masculine name, from Arabic origin with the meaning " Rock ".
+                        Mentioned in the Quran, Surah Baqrah verse 264.</h2>
+                </div>
+                <div class="image-holder">
+                    <img src="images/safwan.png">
+                </div>
+                <div class="round-rect-2"></div>
+            </section>
+            <div class="marquee-holder">
+                <marquee>
+                    <div><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><i class="fa-solid fa-circle-exclamation"></i><p>CAUTION</p><div>
+                </marquee>
+            </div>
+        </main>
     </body>
 
 </html>
